--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
 .top-text {
   padding: 9vw 3vw 2vw 6vw;
 }
-.top-textt {
+.top-text-one {
   padding: 9vw 3vw 7vw 6vw;
 }
 .top-text-two {
